--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="da" dir="ltr">
 	<head>
 		<meta charset="utf-8">
 		<title>Ladida</title>
 	</head>
 	<body>
-
+        <h1>HÆÆÆST</h1>
 	</body>
 </html>
