--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Ladida</title>
 	</head>
 	<body>
-        <h1>HÆÆÆST</h1>
+        <h1>HÆÆÆST er BEDST</h1>
         <img src="img/hest.jpeg" >
 	</body>
 </html>
