--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="da" dir="ltr">
 	<head>
 		<meta charset="utf-8">
-		<title>Ladida</title>
+		<title>Ladida er en hest</title>
 	</head>
 	<body>
 
