--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 
-        <h1>HÆÆÆST er BEDST</h1>
+        <h1>HESY er BEDST</h1>
         <img src="img/hest.jpeg" >
 	</body>
 </html>
