--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 
         <h1>HÆÆÆST  BEDST</h1>
         <img src="img/hest.jpeg" >
+				<div>Hvornår skal vi have frokost?</div>
 	</body>
 </html>
