--- a/index.html
+++ b/index.html
@@ -2,16 +2,11 @@
 <html lang="da" dir="ltr">
 	<head>
 		<meta charset="utf-8">
-		<title>Ladida</title>
+		<title>Ladida er en hest</title>
 	</head>
 	<body>
 
-<<<<<<< HEAD
         <h1>HESY er BEDST</h1>
-=======
-        <h1>HÆÆÆST  BEDST</h1>
->>>>>>> 6391dc4f45b8152530a38fd0d0b4b49cff3e9180
         <img src="img/hest.jpeg" >
-				<div>Hvornår skal vi have frokost?</div>
 	</body>
 </html>
