Included grid and grid area

--- a/grid-area.html
+++ b/grid-area.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="grid.css">
+		<link rel="stylesheet" href="grid-area.css">
 	</head>
 	<body>
 
@@ -19,7 +19,7 @@
 		</aside>
 
 		<aside class="right">
-			Right sidebar
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad mini
 		</aside>
 
 		<nav>
